2025-11-28  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/tests/check-delimiter-validity.sh: Add unit
	test for foregoing change to delimiters accepted when reading a
	delimited name.

2025-11-28  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (read_delimited_name): Stop accepting
	horizontal motion tokens as escape sequence delimiters.  This to
	prohibit use of the delimited `\h` escape sequence as a
	delimiter, but because of GNU troff's internal design, also
	prohibits the parameterless `\0`, `\^`, and `\|` delimiters.

	* doc/groff.texi.in (Delimiters):
	* man/groff.7.man (Delimiters): De-document support for these
	delimiters.

	* NEWS: Report change.

	Fixes <https://savannah.gnu.org/bugs/?67744>.  The problem of
	acceptance of `\h` as an escape sequence delimiter appears to
	date back to groff's birth.  (`get_delim_name()` didn't check
	for any token types except EOF and newline.)

2025-11-28  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/tests/check-delimiter-validity.sh:
	Regression-test Savannah #67744.

2025-11-28  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (token::description): Add assertion;
	every token type should have a human-readable description.  In
	the event that's not the case and `NDEBUG` is defined, describe
	the anomalous token as "an undescribed token" rather than "a
	magic token", to make it clearer that the problem results from
	developer oversight.

2025-11-28  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/token.h: Add new inline member function
	`is_node()` to aid input parser diagnostics.

2025-11-28  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp: Trivially refactor.  Rename
	`get_delimited_name()` to `read_delimited_name()` because it
	does not retrieve a property; it advances the input stream
	pointer.  Update declaration and definition.